--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             The New Yorker Music Scraper
         </title>
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="style.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
         </style>
@@ -12,11 +12,12 @@
     </head>
     <body>
         <h1>The New Yorker Music Scraper &#127911;</h1>
-        <p>Hi! This is a page that uses a python script to scrape the New Yorker's Jazz, Rock, and Pop music recommendations.<br>
-        Hover over the album covers to listen to each album's tracks.</p>
+        <p>Welcome! Here you can find the New Yorker's Jazz, Rock, and Pop music recommendations scraped by a
+            Python script running on AWS Lambda.<br>
+        Hover over the covers to listen to each album's tracks.</p>
         <div class="container" id="cont">
             <script>
-        $.getJSON( "./records.json", function( albums ) {
+        $.getJSON( "https://newyorker.s3.eu-west-2.amazonaws.com/records.json", function( albums ) {
             let i = 0
                 Object.keys(albums).forEach(key => {
                     var node = document.getElementById('cont');
