--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            The New Yorker Music Scraper
+            The New Yorker Music Project
         </title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/237/headphone_1f3a7.png">
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-        <h1>The New Yorker Music Scraper &#127911;</h1>
+        <h1>The New Yorker Music Project &#127911;</h1>
         <p>Hi! Here you can find the New Yorker's Jazz, Rock, and Pop music recommendations scraped by a
             Python script running on AWS Lambda.<br>
         Hover over the covers to listen to each album's tracks.</p>
