--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            The New Yorker Music Project
-        </title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/237/headphone_1f3a7.png">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
-        </style>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    </head>
-    <body>
-        <header>
+
+<head>
+    <title>
+        The New Yorker Music Project
+    </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/237/headphone_1f3a7.png">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
+    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
+
+<body>
+    <header>
         <h1>The New Yorker Music Project &#127911;</h1>
-        <p>Hi! Here you can find the New Yorker's Jazz, Rock, and Pop music recommendations scraped by a
-            Python script running on AWS Lambda.<br>
-        Hover over the covers to listen to each album's tracks.</p>
+        <p>Hi! Here you can find the New Yorker's Jazz, Rock, and Pop music recommendations scraped by a Python script running on AWS Lambda.<br> Hover over the covers to listen to each album's tracks.</p>
         <p>Want to know how this was built? <a href="https://github.com/MarSavar/NewYorkerMusic" class="third after" target="_blank">Click here for the source code</a></p>
-        </header>
-        <div class="container" id="cont">
+    </header>
+    <div class="container" id="cont">
         <script type="text/javascript" src="./display.js"></script>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
