--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
             running on AWS Lambda.<br> Hover over the covers to listen to each album's tracks.</p>
         <p>Want to know how this was built? <a href="https://github.com/MarSavar/NewYorkerMusic" class="third after"
                 target="_blank">Click here for the source code</a></p>
+        <p>March 2021 update: only the latest 24 album recommendations are now displayed.</p>
     </header>
     <div class="container" id="cont">
     </div>
     <div class="buttoncont">
         <button id="morealbums">More albums</button>
     </div>
-    <script type="text/javascript" src="./display.js?v=2"></script>
+    <script type="text/javascript" src="./display.js?v=4"></script>
 </body>
 
 </html>
