--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,20 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Yorker Music</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-180275476-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-180275476-1");
+    </script>
   </head>
   <body>
     <div id="root"></div>
