Update card animation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="An archive of the New Yorker's Jazz, Rock, and Pop music recommendations"
+    />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
       href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/320/apple/237/headphone_1f3a7.png"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Yorker Music</title>
+    <title>The New Yorker Music Project</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
