--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,10 @@
       name="description"
       content="An archive of the New Yorker's Jazz, Rock, and Pop music recommendations"
     />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta
+      name="keywords"
+      content="New Yorker,jazz,rock,pop,music,recommendations,scraper,python,lambda,aws,New Yorker Music Project"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
