--- a/frontend-deprecated/index.html
+++ b/frontend-deprecated/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="An archive of the New Yorker's Jazz, Rock, and Pop music recommendations"
+      content="A living archive of the New Yorker's Jazz, Rock, and Pop music recommendations"
     />
     <meta
       name="keywords"
